--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,10 @@ body {
 }
 
 .dropdown-menu-products li {
-    padding: 16px;
+    padding:  16px 0;
+}
+.dropdown-menu-products {
+    padding:  0 16px;
 }
 a {
     text-decoration: none;
@@ -4576,7 +4579,9 @@ body {
         padding-top: 60px;
         padding-bottom: 60px;
     }
-
+    .header-nav{
+        gap: 70px !important;
+    }
     .STORAGS p,
     .STORAGS ul li {
         font-size: 16px !important;
@@ -4752,6 +4757,9 @@ body {
     .section-padding {
         padding-top: 100px;
         padding-bottom: 100px;
+    }
+    .header-nav{
+        gap: 80px !important;
     }
     .form_field_container div.col{
         padding-right: 1px;
