--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6312,3 +6312,6 @@ animation: rotation 1s linear infinite;
 .fa-add:before, .fa-plus:before{
     content: "\f107";
 }
+.Vision_icon .fa-plus{
+    content: "\2b" !important;
+}
